--- a/package.json
+++ b/package.json
@@ -1,23 +1,69 @@
 {
   "name": "template-next-13",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.1.0",
+  "sideEffects": false,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "dev": "next dev -p 3000",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "lint:style": "stylelint './**/*.module.css'",
+    "lint:style:fix": "stylelint --fix './**/*.module.css'",
+    "postinstall": "(command -v husky && husky install && syncpack format) || echo 'husky is not installed, skipping'; test -f .env.local || (test -f .env.sample && cp .env.sample .env.local || echo -e \"\\e[33mNo env file initialized\\e[0m\")",
+    "preinstall": "npx only-allow pnpm",
+    "prepare": "(command -v husky && husky install ) || echo 'husky is not installed, skipping'",
+    "security": "audit-ci --config ./audit-ci.json",
     "start": "next start",
-    "lint": "next lint"
+    "test": "jest",
+    "test:circular": "pnpm depcruise --validate .dependency-cruiser.js pages --ignore-known",
+    "test:coverage": "pnpm test -- --coverage",
+    "test:type": "pnpm build"
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.35.0"
+  },
+  "devDependencies": {
+    "@axe-core/react": "4.4.4",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@types/jest-axe": "3.5.4",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "5.46.1",
+    "@typescript-eslint/parser": "5.46.1",
+    "audit-ci": "6.3.0",
+    "dependency-cruiser": "11.15.0",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-react-app": "7.0.1",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "27.1.7",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react-app": "6.2.2",
+    "eslint-plugin-risxss": "2.1.0",
+    "eslint-plugin-unused-imports": "2.0.0",
+    "husky": "8.0.1",
+    "jest": "29.0.3",
+    "jest-axe": "6.0.0",
+    "jest-environment-jsdom": "29.0.3",
+    "lint-staged": "13.0.3",
+    "npm-audit-resolver": "3.0.0-7",
+    "prettier": "2.7.1",
+    "stylelint": "14.11.0",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-standard": "28.0.0",
+    "stylelint-declaration-strict-value": "1.9.0",
+    "syncpack": "8.2.4",
+    "ts-node": "10.9.1",
     "typescript": "4.9.5"
   }
 }
